# PFE

./: .gitmodules  AGENTS.md  LICENSE  PFE.code-workspace  index.html
.zed/: debug.json  settings.json
crates/: .gitignore
crates/max3010x-async/: Cargo.toml
crates/max3010x-async/src/: lib.rs  reading.rs
crates/max3010x-async/src/config/: common.rs  max30102.rs
doc/: LC76G_GNSS_Protocol_Reference.md  la_anrml  la_nrml  max30003.md
esp32/: .gitignore  Cargo.toml  build.rs  partitions.csv  wokwi.toml
esp32/.cargo/: config.toml
esp32/lv_conf/: lv_conf.h
esp32/src/: config.example.rs  crypto.rs  lib.rs  mqtt.rs  oxymeter.rs  plotter.rs  processor.rs  touch.rs  utils.rs  wifi.rs
esp32/src/app/: bus.rs  mod.rs  pipeline.rs  state.rs
esp32/src/drivers/: bus.rs  die_temp.rs  display.rs  ecg.rs  gps.rs  i2c.rs  io_expander.rs  mod.rs  ntc.rs  oxymeter.rs  qspi_bus.rs  sensor.rs  touch.rs
esp32/src/drivers/low/: cst9217.rs  ft6336.rs  max30003.rs  mod.rs
esp32/src/dsp/: coeffs.rs  filters.rs  metrics.rs  mod.rs
esp32/src/services/: mod.rs
esp32/src/services/gps/: mod.rs  task.rs
esp32/src/services/io_expander/: mod.rs
esp32/src/services/mqtt/: mod.rs  task.rs
esp32/src/services/power/: mod.rs
esp32/src/services/rendering/: display.rs  framebuffer.rs  lvgl_alloc.rs  mod.rs  task.rs
esp32/src/services/sensing/: die_temp.rs  driver.rs  ecg.rs  mod.rs  pipeline.rs  task.rs  ui.rs
esp32/src/services/storage/: mod.rs
esp32/src/services/time/: mod.rs
esp32/src/services/touch/: driver.rs  mod.rs  task.rs
esp32/src/services/ui/: mod.rs  task.rs  watch_task.rs
esp32/src/services/wifi/: mod.rs  task.rs  ui.rs
esp32/src/system/: board.rs  mod.rs  net.rs
esp32/src/tasks/: mod.rs  mqtt.rs  sensor.rs  wifi.rs
esp32/src/ui/: config.rs  display_settings.rs  ecg.rs  geom.rs  gmt.rs  gps.rs  keyboard.rs  layout.rs  mod.rs  os.slint  pipeline.rs  platform.rs  power_settings.rs  settings.rs  settings_disp.rs  settings_gmt.rs  settings_kb.rs  settings_pwr.rs  theme.rs  theme.slint  touch_task.rs  vitals.rs  watchface.rs
esp32/src/ui/components/: compass_ring.slint  page_indicator.slint  section_header.slint  stat_card.slint  status_badge.slint  toggle_switch.slint
esp32/src/ui/widgets/: ecg.slint  gps.rs  gps.slint  mod.rs  oxymeter.slint  settings.slint  watchface.rs  watchface.slint
esp32/tools/: fir-coef-gen.py  oxymeterplot.py
fpga/: .gitignore  fpga.gprj
fpga/src/: fpga.cst  fpga.rao  fpga.sdc  top.sv
webapp/: Cargo.toml  README.md  tailwind.config.js
webapp/src/: app.rs  components.rs  crypto.rs  lib.rs  main.rs  mqtt.rs
webapp/style/: tailwind.css
