[package]
edition = "2024"
name = "esp32"
rust-version = "1.88"
version = "0.1.0"

[features]
# Enable live signal plotting via serial (adds overhead to DSP loop)
plot = []

[[bin]]
name = "esp32"
path = "./src/bin/main.rs"
test = false
bench = false

[lib]
test = false
bench = false

[[test]]
harness = false
name = "hello_test"


[dependencies]
# ! ### pmic ###
axp2101 = { package = "axp2101-embedded", version = "0.3", features = ["async"] }

# ! ### project crates ###
# crypto
ascon-aead = "0.5"
getrandom = { version = "0.2", features = ["custom"] }
# oxymeter
max3010x = "0.2"
# transport
rust-mqtt = { version = "0.5", default-features = false, features = [
  "bump",
  "v5",
] }
# gps
nmea = { version = "0.7", default-features = false, features = ["GNSS", "defmt-03"] }
# ui (LVGL bindings via bevy_ecs)
lv_bevy_ecs = { version = "0.10", features = ["defmt", "no_ecs"] }

# ! ### espressif crates ###
# provides the bootloader and app description for flashing
esp-bootloader-esp-idf = { version = "0.5", features = ["defmt", "esp32s3"] }
# provides the HAL impl for the ESP32
esp-hal = { version = "~1.1", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }
# provides heap mem allocation for the ESP32
esp-alloc = { version = "0.10", features = ["defmt"] }
# provides async runtime, alloc, and radio support
esp-rtos = { version = "0.3", features = [
  "defmt",
  "esp32s3",
  "embassy",
  "esp-alloc",
  "esp-radio",
] }
# provides Wi-Fi and Bluetooth support for the ESP32 (driver L2)
esp-radio = { version = "0.18", features = [
  "defmt",
  "esp32s3",
  "ble",
  "coex",
  "esp-alloc",
  "unstable",
  "wifi",
] }

# ! ### debugging crates ###
# fuck regular logging
defmt = "1.1"
# enables RTT logging support
rtt-target = { version = "0.6.2", features = ["defmt"] }
# enables panic messages to be sent over RTT
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }

# ! ### embassy crates ###
# task executor async (wrapped by esp-rtos)
embassy-executor = { version = "0.10", features = ["defmt"] }
# time(r) management
embassy-time = { version = "0.5", features = ["defmt"] }
# network async
embassy-net = { version = "0.9", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
  "proto-ipv4",
] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-embedded-hal = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"


# ! ### networking crates ###
# Transport L3/L4
smoltcp = { version = "0.12", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# bt garbage
# bt-hci = "0.8.0"
# more bt garbage
# trouble-host = { version = "0.6.0", features = ["gatt"] }

# ! ### display crates ###
# The Core Display Architecture (display-driver ecosystem)
display-driver = "0.1"
display-driver-mipidcs = "0.1"
display-driver-co5300 = "0.1"

# ! ### utility crates ###
# self explanatory
embedded-graphics = "0.8"
critical-section = "1.2.0"
# fucking self explanatory
static_cell = "2.1.1"
libm = "0.2.16"
nb = "1.1.0"
max3010x-async = { version = "0.1.0", path = "../crates/max3010x-async" }
tca9554 = { version = "0.1.1", features = ["defmt"] }

# ! ### storage crates ###
esp-storage = { version = "0.9", features = ["esp32s3"] }
sequential-storage = "7.2"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
embedded-storage = "0.3"
embedded-storage-async = "0.4"

[profile.dev.package.esp-storage]
opt-level = 3

[dev-dependencies]
embedded-test = { version = "0.7", features = [
  "defmt",
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }

[build-dependencies]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
